src/objects/ImportObject__c.object
<CustomObject>
    <description>Accepts data from Excel through the Salesforce import wizard and inserts it correctly into WaterGrass.</description>
    <fields>
        <fullName>Account_LegacyID__c</fullName>
        <description>The ID from the previous database, if there is one.</description>
        <inlineHelpText>The ID from the previous database, if there is one.</inlineHelpText>
        <label>Account_LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>222</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <label>Account Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Nonprofit</fullName>
                </value>
                <value>
                    <fullName>Watershed Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_City__c</fullName>
        <label>Address_City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Country__c</fullName>
        <label>Address_Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_County__c</fullName>
        <label>Address_County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_State__c</fullName>
        <label>Address_State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_StreetLine1__c</fullName>
        <label>Address_StreetLine1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_StreetLine2__c</fullName>
        <label>Address_StreetLine2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Address_StreetLine3__c</fullName>
        <label>Address_StreetLine3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_ZipCode__c</fullName>
        <label>Address_ZipCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Address_StreetLine1__c &amp; BR() &amp;
IF(Address_StreetLine2__c != NULL, Address_StreetLine2__c &amp; BR(), &apos;&apos;) &amp;
Address_City__c &amp; &apos;, &apos; &amp; Address_State__c &amp; &apos; &apos; &amp; Address_ZipCode__c &amp; BR() &amp;
Address_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch</label>
        <referenceTo>Data_Import_Batch__c</referenceTo>
        <relationshipLabel>Imported Records</relationshipLabel>
        <relationshipName>ImportedRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CampaignMember_Status__c</fullName>
        <description>Accepted values are the campaignmember.status field values.  Currently Attended; RSVPed and Attended; Donated; Communication sent; Signed e-petition; No Show; Responded No; Responded Yes; Added to campaign;Contributed; Took action</description>
        <inlineHelpText>Accepted values are the campaignmember.status field values.  Currently Attended; RSVPed and Attended; Donated; Communication sent; Signed e-petition; No Show; Responded No; Responded Yes; Added to campaign;Contributed; Took action</inlineHelpText>
        <label>CampaignMember_Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attended</fullName>
                    <default>true</default>
                    <label>Attended</label>
                </value>
                <value>
                    <fullName>RSVPed and Attended</fullName>
                </value>
                <value>
                    <fullName>Donated</fullName>
                </value>
                <value>
                    <fullName>Communication sent</fullName>
                </value>
                <value>
                    <fullName>Signed e-petition</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Responded No</fullName>
                </value>
                <value>
                    <fullName>Responded Yes</fullName>
                </value>
                <value>
                    <fullName>Added to campaign</fullName>
                </value>
                <value>
                    <fullName>Contributed</fullName>
                </value>
                <value>
                    <fullName>Took action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the campaign is still active, &quot;1&quot;.  Otherwise blank or 0.  This helps filter out campaigns which are already completed.</description>
        <inlineHelpText>If the campaign is still active, &quot;1&quot;.  Otherwise blank or 0.  This helps filter out campaigns which are already completed.</inlineHelpText>
        <label>Campaign_IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_LegacyID__c</fullName>
        <label>Campaign_LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Record_Type__c</fullName>
        <description>A restricted picklist of campaign types that exist in WaterGrass.  If you have added a type of campaign and you&apos;re adding records that include the new type, then it also has to be added to the values picklist of Campaign_Type.</description>
        <inlineHelpText>A restricted picklist of campaign types that exist in WaterGrass.  If you have added a type of campaign and you&apos;re adding records that include the new type, then it also has to be added to the values picklist of Campaign_Type.</inlineHelpText>
        <label>Campaign Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fundraising_Activity</fullName>
                    <label>Fundraising Activity</label>
                </value>
                <value>
                    <fullName>Good_or_Service</fullName>
                    <label>Good or Service</label>
                </value>
                <value>
                    <fullName>Outreach_Campaign</fullName>
                    <label>Outreach Campaign</label>
                </value>
                <value>
                    <fullName>Public_Event</fullName>
                    <label>Public Event</label>
                </value>
                <value>
                    <fullName>Signup</fullName>
                </value>
                <value>
                    <fullName>Volunteer_Event</fullName>
                    <label>Volunteer Event</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_TypeText__c</fullName>
        <label>Campaign_TypeText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_or_Organization__c</fullName>
        <description>Name of the company or organization the person should be linked to, if any.</description>
        <inlineHelpText>Name of the company or organization the person should be linked to, if any.</inlineHelpText>
        <label>Company or Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactCalculated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The data import controller calculates this import object is related to this contact.</description>
        <inlineHelpText>The data import controller calculates this import object is related to this contact.</inlineHelpText>
        <label>ContactCalculated</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ImportObjects</relationshipLabel>
        <relationshipName>Source_ImportObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contribution_Amount__c</fullName>
        <description>The amount of the donation, worth of the inkind donation.</description>
        <inlineHelpText>The amount of the donation, worth of the inkind donation.</inlineHelpText>
        <label>Contribution_Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contribution_Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, will mark contribution as anonymous</description>
        <inlineHelpText>When checked, will mark contribution as anonymous</inlineHelpText>
        <label>Contribution Anonymous?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contribution_Description__c</fullName>
        <label>Contribution Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contribution_HoursActual__c</fullName>
        <label>Contribution_HoursActual</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contribution_MmbrEndDate__c</fullName>
        <description>Membership End Date</description>
        <inlineHelpText>Membership End Date</inlineHelpText>
        <label>Contribution_MmbrEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contribution_MmbrStartDate__c</fullName>
        <label>Contribution_MmbrStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contribution_RecordType__c</fullName>
        <description>Uses only values accepted by WaterGrass.  If you have other values, either put this data into Contribution_Type, which is a Text field, or change the values in your spreadsheet before you import it.</description>
        <inlineHelpText>Uses only values accepted by WaterGrass.  If you have other values, either put this data into Contribution_Type, which is a Text field, or change the values in your spreadsheet before you import it.</inlineHelpText>
        <label>Contribution_RecordType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Challenge</fullName>
                </value>
                <value>
                    <fullName>Donation</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
                <value>
                    <fullName>InKind</fullName>
                </value>
                <value>
                    <fullName>Major Donation</fullName>
                </value>
                <value>
                    <fullName>Membership</fullName>
                </value>
                <value>
                    <fullName>Pledge</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Volunteer Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contribution_Stage__c</fullName>
        <description>Only WaterGrass values accepted.  &quot;Closed/Won&quot; can be used for any completed contribution - donation, hours of volunteer work, inkind donation.</description>
        <inlineHelpText>Only WaterGrass values accepted.  &quot;Closed/Won&quot; can be used for any completed contribution - donation, hours of volunteer work, inkind donation.</inlineHelpText>
        <label>Contribution_Stage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closed/Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Orphan</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Promised</fullName>
                </value>
                <value>
                    <fullName>Payment Received</fullName>
                </value>
                <value>
                    <fullName>Thank you mailed</fullName>
                </value>
                <value>
                    <fullName>Grant Prep</fullName>
                </value>
                <value>
                    <fullName>Grant Submitted</fullName>
                </value>
                <value>
                    <fullName>Grant Under Review</fullName>
                </value>
                <value>
                    <fullName>Grant Awarded</fullName>
                </value>
                <value>
                    <fullName>Grant Denied</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Letter Sent</fullName>
                </value>
                <value>
                    <fullName>Meeting scheduled</fullName>
                </value>
                <value>
                    <fullName>Ask Under Review</fullName>
                </value>
                <value>
                    <fullName>Ask Denied</fullName>
                </value>
                <value>
                    <fullName>Ask Accepted</fullName>
                </value>
                <value>
                    <fullName>Donation Received</fullName>
                </value>
                <value>
                    <fullName>Paid / Current</fullName>
                </value>
                <value>
                    <fullName>Unpaid</fullName>
                </value>
                <value>
                    <fullName>Send Pledge Reminder</fullName>
                </value>
                <value>
                    <fullName>Pledge Recorded</fullName>
                </value>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Needs Analysis</fullName>
                </value>
                <value>
                    <fullName>Value Proposition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contribution_TransactionDate__c</fullName>
        <description>In format &quot;yyyy-mm-dd&quot;</description>
        <inlineHelpText>In format &quot;yyyy-mm-dd&quot;</inlineHelpText>
        <label>Contribution_TransactionDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contribution_Type__c</fullName>
        <label>Contribution_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Campaign_Member_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created Campaign Member Record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Contribution_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created Contribution Record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Second_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created Second Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadCalculated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The LeadId calculated by the data import controller.</description>
        <inlineHelpText>The LeadId calculated by the data import controller.</inlineHelpText>
        <label>LeadCalculated</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>ImportObjects</relationshipLabel>
        <relationshipName>Source_ImportObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MatchReliability__c</fullName>
        <description>How did the data import controller match this record to the contact or lead?</description>
        <inlineHelpText>How did the data import controller match this record to the contact or lead?</inlineHelpText>
        <label>MatchReliability</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Address__c</fullName>
        <formula>if( ContactCalculated__c = null, 

LeadCalculated__r.Street &amp; BR() &amp;  
LeadCalculated__r.City &amp; &apos;,  &apos; &amp; LeadCalculated__r.State &amp; &apos; &apos; &amp; LeadCalculated__r.PostalCode &amp; BR() &amp; 
LeadCalculated__r.Country,


 ContactCalculated__r.MailingStreet &amp; BR() &amp;  
ContactCalculated__r.MailingCity &amp; &apos;,  &apos; &amp; ContactCalculated__r.MailingState &amp; &apos; &apos; &amp; ContactCalculated__r.MailingPostalCode &amp; BR() &amp; 
ContactCalculated__r.MailingCountry )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match_Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_EmailWork__c</fullName>
        <formula>If(

If(ContactCalculated__c = null,
 LeadCalculated__r.Work_Email__c,
 ContactCalculated__r.Work_Email__c )

=  Person_EmailWork__c ,


If(ContactCalculated__c = null,
 LeadCalculated__r.Work_Email__c,
 ContactCalculated__r.Work_Email__c ),


UPPER(If(ContactCalculated__c = null,
 LeadCalculated__r.Work_Email__c,
 ContactCalculated__r.Work_Email__c ))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match_EmailWork</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Email__c</fullName>
        <formula>IF(
 ContactCalculated__c = null,

 ContactCalculated__r.Email ,

 LeadCalculated__r.Email )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match_Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_PhoneMobile__c</fullName>
        <formula>IF(ContactCalculated__c = null,

 ContactCalculated__r.MobilePhone  ,

LeadCalculated__r.MobilePhone)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match_PhoneMobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_PhoneWork__c</fullName>
        <formula>IF(ContactCalculated__c = null, 

ContactCalculated__r.Account.Phone , 

LeadCalculated__r.Phone)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match_PhoneWork</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Status__c</fullName>
        <label>Match Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Matched to Contact</fullName>
                </value>
                <value>
                    <fullName>Matched to Lead</fullName>
                </value>
                <value>
                    <fullName>New Contact Created</fullName>
                </value>
                <value>
                    <fullName>New Lead Created</fullName>
                </value>
                <value>
                    <fullName>Error with New Record Creation</fullName>
                </value>
                <value>
                    <fullName>Matched to Converted Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Missing_Campaign__c</fullName>
        <formula>AND (
NOT(ISBLANK(Campaign_Name__c)),
Created_Campaign_Member_Record__c = FALSE
)</formula>
        <label>Missing Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Missing_Contribution__c</fullName>
        <formula>AND (

NOT(ISBLANK(Contribution_Amount__c)),
Created_Contribution_Record__c = false
)</formula>
        <label>Missing Contribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Missing_Second_Contact__c</fullName>
        <description>Flag to identify missing Second Contacts</description>
        <formula>AND (
NOT(ISBLANK(Person2_LastName__c)),
Created_Second_Contact__c= FALSE
)</formula>
        <inlineHelpText>Flag to identify missing Second Contacts</inlineHelpText>
        <label>Missing Second Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Person2_FirstName__c</fullName>
        <label>Person2_FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person2_LastName__c</fullName>
        <label>Person2_LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_DoNot__c</fullName>
        <description>Restrictions on how you contact this person.</description>
        <inlineHelpText>Restrictions on how you contact this person.</inlineHelpText>
        <label>Person_DoNot</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DoNot</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Person_EmailOther__c</fullName>
        <label>Person_EmailOther</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Person_EmailPersonal__c</fullName>
        <label>Person_EmailPersonal</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Person_EmailWork__c</fullName>
        <label>Person_EmailWork</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Person_FirstName__c</fullName>
        <label>Person_FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_LastName__c</fullName>
        <label>Person_LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_LegacyID__c</fullName>
        <label>Person_LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_MailingListsText__c</fullName>
        <label>Person_MailingListsText</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Person_PhoneHome__c</fullName>
        <label>Person_PhoneHome</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Person_PhoneMobile__c</fullName>
        <label>Person_PhoneMobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Person_PhoneOther__c</fullName>
        <label>Person_PhoneOther</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Person_PhoneWork__c</fullName>
        <label>Person_PhoneWork</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Person_Prefix__c</fullName>
        <description>Mr., Ms., etc.</description>
        <inlineHelpText>Mr., Ms., etc.</inlineHelpText>
        <label>Person_Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Title__c</fullName>
        <description>Professional Title, ie. Director of Fundraising</description>
        <inlineHelpText>Professional Title, ie. Director of Fundraising</inlineHelpText>
        <label>Person_Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_VolunteerInterestsText__c</fullName>
        <label>Person_VolunteerInterestsText</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Processed_Date__c</fullName>
        <label>Processed_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the record has already been processed and inserted into the database, this field is true.  Otherwise null or false.</description>
        <inlineHelpText>If the record has already been processed and inserted into the database, this field is true.  Otherwise null or false.</inlineHelpText>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesforceOwnerID__c</fullName>
        <label>SalesforceOwnerID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>To Process</fullName>
                    <default>true</default>
                    <label>To Process</label>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Error with Processing</fullName>
                </value>
                <value>
                    <fullName>Holding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ImportObject</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Processed_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Person_LastName__c</columns>
        <columns>Person_FirstName__c</columns>
        <columns>Company_or_Organization__c</columns>
        <columns>Batch__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Imported_this_week</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Batch__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Address_City__c</columns>
        <columns>Person_EmailPersonal__c</columns>
        <columns>Campaign_Name__c</columns>
        <columns>Contribution_Amount__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Imported this week</label>
    </listViews>
    <listViews>
        <fullName>Not_Processed</fullName>
        <columns>NAME</columns>
        <columns>Person_FirstName__c</columns>
        <columns>Person_LastName__c</columns>
        <columns>Person_EmailPersonal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>To Process</value>
        </filters>
        <label>Not Processed</label>
    </listViews>
    <nameField>
        <displayFormat>ImportObject-{0000}</displayFormat>
        <label>ImportObject Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ImportObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>